# rss-greg

./: .env.example  .gitignore  README.md  app.py  package-lock.json  package.json  shell.nix
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: feed.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: feed.toml
src-tauri/permissions/autogenerated/: archive_article.toml  delete_article.toml  get_archived_ids.toml  get_articles_page.toml  get_feed.toml  get_feed_sources.toml  get_storage_info.toml  refresh_feeds.toml  reinstate_article.toml  save_feed_sources.toml
src-tauri/src/: lib.rs  main.rs
templates/: fuse.basic.min.js  index.html
templates/favicon/: feed  site.webmanifest
