[package]
name = "gregs-feed"
version = "0.1.0"
description = "Native shell for Greg's RSS feed"
authors = ["Gregory Cotton"]
edition = "2021"

[lib]
name = "gregs_feed_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
