[package]
name = "gregs-feed"
version = "0.1.0"
description = "Native shell for Greg's RSS feed"
authors = ["Gregory Cotton"]
edition = "2021"

[lib]
name = "gregs_feed_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
feed-rs = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
url = "2"
