[package]
name = "gregs-feed"
version = "0.1.0"
description = "Native shell for Greg's RSS feed"
authors = ["Gregory Cotton"]
edition = "2021"

[lib]
name = "gregs_feed_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
feed-rs = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { version = "0.3.2", features = ["NSString", "NSURL", "NSURLRequest"] }
objc2-web-kit = { version = "0.3.2", features = ["WKWebView"] }
